[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neu_imaging"
version = "0.1.0"
description = "Hyperspectral neutron imaging with event cameras"
readme = "README.md"
license = {text = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.3.0",
    "scikit-learn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[tool.setuptools]
packages = ["neu_imaging"]
